--- a/index.html
+++ b/index.html
@@ -1,30 +1,30 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Аниме Поисковик</title>
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="src/style.css">
+  <script src="src/script.js" defer></script>
 </head>
 <body>
 <div class="container">
-  <header>
-    <h1>Аниме Поисковик</h1>
-    <div class="search-container">
-      <input type="text" id="search-input" placeholder="Найти аниме...">
-      <button id="search-btn">Поиск</button>
-      <button id="top-btn">Топ аниме</button>
+  <header class="header">
+    <h1 class="header__title">Аниме Поисковик</h1>
+    <div class="search">
+      <input type="text" id="searchInput" class="search__input" placeholder="Найти аниме...">
+      <button id="searchBtn" class="button button--primary">Поиск</button>
+      <button id="topBtn" class="button">Топ аниме</button>
     </div>
   </header>
 
-  <main>
-    <div id="loading" class="hidden">Загрузка...</div>
-    <div id="anime-grid" class="anime-grid"></div>
-    <div id="anime-detail" class="anime-detail hidden"></div>
-    <button id="back-btn" class="hidden">Назад к списку</button>
+  <main class="main">
+    <div id="loading" class="loading hidden">Загрузка...</div>
+    <div id="animeGrid" class="anime-grid"></div>
+    <div id="animeDetail" class="anime-detail hidden"></div>
+    <button id="backBtn" class="button button--back hidden">Назад к списку</button>
   </main>
 </div>
-
-<script src="src/script.js" type="module"></script>
 </body>
 </html>
